--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,7 @@
 {
   "name": "operational-characteristic-3d",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
